deployment-definition-nodeaffinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: red
  name: red
spec:
  replicas: 2
  selector:
    matchLabels:
      app: red
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: red
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/master
                operator: Exists


status: {}
~                                                                                                                                                               
~                                                                                                                                                               
~                                                                                                                                                               
~                                                                                                                                                               
~                                                                                                                                                               
~                                                                                                                                                               
~                                                                                                                                                               
~                                                                                                                                                               
~                                                                                                                                                               
~                                                                                                                                                               
~                                                                                                                                                               
~                                                                                                                                                               
~                                                                                                                                                               
"red.yaml" 33L, 622C                                                                                                                          31,0-1        All
