pod-definition-secrets-volumes.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels: 
    app: myapp
    type: front-end
spec:
  containers:
    - name: nginx-container
      image: nginx
    - name: backend-container
      image: redis
      command: ["sleep2.0"]
      args: ["10"]
      volumes:
      - name: app-secret-volume
        secret:
          secretName: app-secret
