service-definition-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: ClusterIp
  ports:
    - targetPort: 80
      port: 80
    selector: 
      app: myapp
      type: front-end
